# af-xdp-experiment

./: Cargo.toml  LICENSE-MIT  README.md  probe.stp
.cargo/: config.toml
af-xdp-ebpf/: Cargo.toml
af-xdp-ebpf-common/: Cargo.toml
af-xdp-ebpf-common/src/: lib.rs
af-xdp-ebpf/src/: main.rs
af-xdp-lib/: Cargo.toml
af-xdp-lib/src/: error.rs  lib.rs  umem.rs  umem_packet_desc.rs  xsk_map.rs
af-xdp-lib/src/descriptor/: error.rs  mod.rs
af-xdp-lib/src/ring/: inner.rs  memory.rs  mod.rs
af-xdp-lib/src/umem/: maker_guard.rs  memory.rs  mod.rs
af-xdp-lib/tests/: invalid_marker.rs  simple.rs
af-xdp-lib/tests/utils/: ebpf.rs  mod.rs  veth_netlink.rs
xtask/src/: build_ebpf.rs  run.rs
