[package]
name = "af-xdp-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
af-xdp-test-common = { path = "../af-xdp-ebpf-common" }

[[bin]]
name = "af-xdp-test"
path = "src/main.rs"
test = false
bench = false


[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
