[package]
name = "af-xdp-lib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rustix = { version = "1.1.2", features = ["net", "mm", "param", "event"] }
tracing = "0.1.41"

aya = { git = "https://github.com/aya-rs/aya" }

[dev-dependencies]
rtnetlink = "0.18.1"
ethtool = { version = "0.2.9" }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
futures = "0.3.31"
rustix = { version = "1.1.2", features = ["net", "mm", "param", "event", "thread"] }
anyhow = "1.0.100"
libc = "0.2.175"
mutnet = "0.7.0"
aya = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
af-xdp-test-common = { path = "../af-xdp-ebpf-common", features = ["user"] }
tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "env-filter"] }
tracing = "0.1.41"